--- a/packages/christmas.yaml
+++ b/packages/christmas.yaml
@@ -19,11 +19,13 @@ automation:
         option: Colourful
     - service: light.turn_on
       entity_id: light.nativity_master
-    - service: select_option
+    - service: select.select_option
       target:
         entity_id: select.nativity_preset
       data:
         option: Default
+    - service: light.turn_on
+      entity_id: light.window_string
     mode: single
   - id: '1637094246273'
     alias: Christmas Lights Off
@@ -39,6 +41,8 @@ automation:
       entity_id: light.wled1_master
     - service: light.turn_off
       entity_id: light.nativity_master
+    - service: light.turn_off
+      entity_id: light.window_string
     mode: single
   - id: '1637094246274'
     alias: Christmas Tree On
