--- a/packages/christmas.yaml
+++ b/packages/christmas.yaml
@@ -10,22 +10,6 @@ automation:
     action:
     - service: switch.turn_on
       entity_id: switch.yard_plug_bottom
-    - service: light.turn_on
-      entity_id: light.wled1_master
-    - service: select.select_option
-      target:
-        entity_id: select.wled1_preset
-      data:
-        option: Colourful
-    - service: light.turn_on
-      entity_id: light.nativity_master
-    - service: select.select_option
-      target:
-        entity_id: select.nativity_preset
-      data:
-        option: Default
-    - service: light.turn_on
-      entity_id: light.window_string
     mode: single
   - id: '1637094246273'
     alias: Christmas Lights Off
@@ -36,13 +20,9 @@ automation:
     condition: []
     action:
     - service: switch.turn_off
+      entity_id: switch.yard_plug_top
+    - service: switch.turn_off
       entity_id: switch.yard_plug_bottom
-    - service: light.turn_off
-      entity_id: light.wled1_master
-    - service: light.turn_off
-      entity_id: light.nativity_master
-    - service: light.turn_off
-      entity_id: light.window_string
     mode: single
   - id: '1637094246274'
     alias: Christmas Tree On
