--- a/configuration.yaml
+++ b/configuration.yaml
@@ -3,19 +3,16 @@ homeassistant:
   packages: !include_dir_named packages
   customize: !include customize.yaml
   external_url: "https://ha.adebenham.com"
-  internal_url: "https://ha.adebenham.com"
+  internal_url: "http://192.168.0.10:8122"
   unit_system: metric
   currency: AUD
-
 
 http:
   server_port: 8122
   trusted_proxies:
     - 192.168.0.10
     - 127.0.0.1
-    - 172.20.0.0/24
-    - 172.18.0.0/24
-    - 172.23.0.0/24
+    - 172.0.0.0/8
   use_x_forwarded_for: true
   cors_allowed_origins:
     - https://cast.home-assistant.io
