--- a/packages/rooms/garage.yaml
+++ b/packages/rooms/garage.yaml
@@ -13,24 +13,14 @@ template:
         delay_off: "0:00:10"
 
 binary_sensor:
-  - platform: mqtt
-    name: Garage Entry Open
-    state_topic: 'tele/RFRemote/RESULT'
-    value_template: >-
-      {% if value_json.RfReceived.Data == '372DF6' %}
-        {{'ON'}}
-      {% else %}
-        {{states('binary_sensor.rfremotebuttona') | upper}}
-      {% endif %}
-    off_delay: 5
   - platform: template
     sensors:
       outback_presence:
-        friendly_name: "Outback Presense"
+        friendly_name: "Outback Presence"
         device_class: presence
         value_template: "{{ is_state('input_boolean.outback_home', 'on') }}"
-      imporeza_presence:
-        friendly_name: "Impreza Presense"
+      impreza_presence:
+        friendly_name: "Impreza Presence"
         device_class: presence
         value_template: "{{ is_state('input_boolean.impreza_home', 'on') }}"
 
@@ -112,7 +102,7 @@ automation:
     description: ''
     trigger:
     - platform: state
-      entity_id: binary_sensor.outback_presense
+      entity_id: binary_sensor.outback_presence
       from: 'off'
       to: 'on'
     condition: []
@@ -153,7 +143,7 @@ automation:
     description: ''
     trigger:
     - platform: state
-      entity_id: binary_sensor.impreza_presense
+      entity_id: binary_sensor.impreza_presence
       from: 'off'
       to: 'on'
     condition: []
@@ -292,7 +282,7 @@ automation:
           state: not_home
     action:
     - service: switch.turn_on
-      entity_id: switch.garage_clips
+      entity_id: switch.garage_recordings
     mode: single
   - id: '1618978148074'
     alias: Cameras - Turn Off Garage recording when home
@@ -317,7 +307,7 @@ automation:
         state: home
     action:
     - service: switch.turn_off
-      entity_id: switch.garage_clips
+      entity_id: switch.garage_recordings
     mode: single
   - id: '1639524461025'
     alias: Garage - Charger finished
